<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adoranwodo.testingexample.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score Tracker. Track scores of two teams in a game "
        android:padding="20dp"
        android:layout_gravity="center_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:weightSum="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team A"
                android:textSize="30sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/teamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="60sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/onePointTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Add 1 Point"/>

            <Button
                android:id="@+id/twoPointsTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Add 2 Points"/>

            <Button
                android:id="@+id/threePointsTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Add 3 Points"/>

            <Button
                android:id="@+id/resetTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Reset"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team B"
                android:textSize="30sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/teamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="60sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />

            <Button
                android:id="@+id/onePointTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Add 1 Point"/>

            <Button
                android:id="@+id/twoPointsTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Add 2 Points"/>

            <Button
                android:id="@+id/threePointsTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Add 3 Points"/>

            <Button
                android:id="@+id/resetTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:text="Reset"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

